<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Memories">


    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/ic_wave__3_"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Memories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/akaya_telivigala"
        android:includeFontPadding="true"
        android:text="@string/memories"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="151dp"
        android:layout_height="102dp"
        android:contentDescription="@string/imageView1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.31"
        app:srcCompat="@drawable/img2" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="149dp"
        android:layout_height="112dp"
        android:contentDescription="@string/imageView7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.091"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@drawable/img5" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="151dp"
        android:layout_height="117dp"
        android:contentDescription="@string/imageView2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.819"
        app:srcCompat="@drawable/img4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="64dp"
        android:layout_height="29dp"
        android:text="@string/textView7"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.277" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="58dp"
        android:layout_height="23dp"
        android:text="@string/textView12"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.558"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.481" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="64dp"
        android:layout_height="29dp"
        android:text="@string/textView13"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.559"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.716" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="31dp"
        android:layout_height="26dp"
        android:text="@string/textView10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.537" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="36dp"
        android:layout_height="24dp"
        android:text="@string/textView14"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:foregroundTint="#075F658F"
        android:text="@string/button1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.13999999" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:text="@string/textView11"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/button5"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button8"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594" />

    <Button
        android:id="@+id/button10"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.824" />

    <Button
        android:id="@+id/button6"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.38"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button7"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.585"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.594" />


    <Button
        android:id="@+id/button9"
        android:layout_width="83dp"
        android:layout_height="48dp"
        android:background="@color/blue"
        android:text="@string/button9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.824" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.152"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/ic_baseline_home_24" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view1"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/ic_baseline_map_24" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/ic_baseline_help_outline_24" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.811"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"
        app:srcCompat="@drawable/ic_baseline_star_24" />


</androidx.constraintlayout.widget.ConstraintLayout>